k8s/overlays/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-tu-phuc-vu
spec:
  selector:
    app: app-tu-phuc-vu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
